update footer fix z-index

--- a/src/modules/MainWrapper/components/Footer/index.less
+++ b/src/modules/MainWrapper/components/Footer/index.less
@@ -9,16 +9,3 @@
   z-index: 10;
   background: white
 }
-
-@media screen and (min-height: '100%') {
-  .footer{
-    height: 40px;
-    line-height: 40px;
-    position: static;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 10;
-    background: white
-  }
-}
