--- a/src/modules/MainWrapper/styles.less
+++ b/src/modules/MainWrapper/styles.less
@@ -28,6 +28,8 @@
   // padding-bottom:65px;
   padding-bottom:1em;
   margin-top:@header-height;
+  z-index: 11;
+  margin-bottom: 40px;
   overflow: hidden;
   min-width:700px;
   &.expandable{
